fixed alignment of form wrapper for responsive design

--- a/src/scss/components/_list.scss
+++ b/src/scss/components/_list.scss
@@ -6,8 +6,7 @@
   input {
     background-color: transparent;
     border: 1px solid $primary;
-    margin: 5px;
-    width: 350px;
+    width: 100%;
     height: 40px;
     padding: 10px;
     text-align: left;
@@ -20,7 +19,7 @@
     background-color: $primary;
     color: white;
     border: none;
-    width: 120px;
+    width: 50%;
     height: 40px;
   }
 }
@@ -30,6 +29,8 @@
   @include max(568px) {
     flex-direction: column;
   }
-  background: red;
-  width: 80vw;
+  margin: 20px;
+  width: 100vw;
+  border-left: 20vw solid red;
+  border-right: 20vw solid red;
 }
