--- a/src/scss/components/_todo.scss
+++ b/src/scss/components/_todo.scss
@@ -2,7 +2,6 @@
   width: 80vw;
   margin: 0px 10px;
   padding: 0 30px;
-  background: blue;
   ul {
     line-height: 45px;
     font-weight: bold;
